--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,146 +1,13 @@
 resources:
   - url: /hacsfiles/mini-graph-card/mini-graph-card-bundle.js
     type: module
-  - url: /hacsfiles/custom-header/custom-header.js
-    type: module
   - url: /hacsfiles/ha-yandex-icons/yandex-icons.js
     type: module  
-
+  - url: /hacsfiles/lovelace-xiaomi-vacuum-card/xiaomi-vacuum-card.js
+    type: module
+    
 views:
-  - title: Home
-    badges: []
-    icon: 'mdi:home'
-    path: home
-    cards:
-      - type: vertical-stack
-        cards:
-          - type: weather-forecast
-            entity: weather.home
-            show_forecast: true
-        
-          - title: Освещение
-            type: entities
-            entities:
-              - entity: switch.wall_switch_ln_right_158d0002f9cb46
-                icon: 'mdi:wall-sconce-flat'
-                name: Коридор
-              - entity: switch.wall_switch_ln_left_158d0002f93e70
-                icon: 'mdi:ceiling-light'
-                name: Гостиная
-              - entity: switch.wall_switch_ln_158d0002c5e4a2
-                icon: 'mdi:ceiling-light'
-                name: Кабинет
-              - entity: light.liustra_v_detskoi
-                icon: 'mdi:dome-light'
-                name: Детская
-              - entity: group.kitchen_lights
-                icon: 'mdi:lightbulb'
-                name: Кухня
-              - entity: group.bedroom_lights
-                icon: 'mdi:lightbulb'
-                name: Спальня
-            
-      - type: vertical-stack
-        cards:
-          - type: glance
-            entities:
-              - entity: binary_sensor.door_window_sensor_158d00039ca2f8
-                name: Входная дверь
-              - entity: binary_sensor.door_window_sensor_158d000231ced3
-                name: Холодильник
-              - entity: binary_sensor.door_window_sensor_158d00044d9900
-                name: Балкон
-                
-          - type: glance
-            entities:
-              - entity: binary_sensor.motion_sensor_158d0002456c78
-                name: Коридор
-              - entity: binary_sensor.motion_sensor_158d0004466dfa
-                name: Кухня
-              - entity: binary_sensor.motion_sensor_158d0004466e9d
-                name: Балкон
-        
-          - type: media-control
-            entity: media_player.yandex_station_14007894c1205c100650
-            name: Большая станция
-            
-          - type: media-control
-            entity: media_player.yandex_station_ff98f02994bc6f9118497cb1
-            name: Мини в детской
-            
-          - type: media-control
-            entity: media_player.lg_webos_smart_tv
-
-        
-      - type: vertical-stack
-        cards:
-          - type: glance
-            entities:
-              - entity: sensor.papas_location
-                name: Папа
-              - entity: sensor.mamas_location
-                name: Мама
-
-          - type: sensor
-            entity: sensor.time_to_work
-            name: Время до работы
-            icon: mdi:car
-            graph: line
-            detail: 1
-            unit: мин
-            hours_to_show: 12
-            
-      - type: horizontal-stack
-        cards:
-          - type: entity-button
-            tap_action:
-              action: toggle
-              confirmation: true
-            show_icon: true
-            show_name: true
-            entity: input_boolean.night_mode
-            
-          - type: entity-button
-            tap_action:
-              action: toggle
-              confirmation: true
-            show_icon: true
-            show_name: true
-            entity: input_boolean.away_mode
-            
-          - type: entity-button
-            tap_action:
-              action: toggle
-              confirmation: true
-            show_icon: true
-            show_name: true
-            entity: input_boolean.vacation_mode
-            
-          - type: entity-button
-            tap_action:
-              action: toggle
-              confirmation: true
-            show_icon: true
-            show_name: true
-            entity: input_boolean.guest_mode
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  !include_dir_list /config/views/
 
 
 
