--- a/views/50-climate.yaml
+++ b/views/50-climate.yaml
@@ -11,4 +11,6 @@ cards:
       - type: weather-forecast
         entity: weather.home
         show_forecast: true
+      - type: thermostat
+        entity: climate.0x60a423fffea3a822_climate
 
