--- a/conf/lights.yaml
+++ b/conf/lights.yaml
@@ -7,12 +7,18 @@ group:
       - switch.wall_switch_ln_158d0002c5db53
       - switch.wall_switch_ln_right_158d0002f9cb46
       - switch.wall_switch_ln_left_158d0002f93e70
+  guestroom_lights:
+    name: Свет в гостиной
+    entities:
+      - switch.0x588e81fffedbceec
+      - switch.wall_switch_ln_left_158d0002f93e70
   kitchen_lights:
     name: Свет на кухне
     entities:
       - switch.wall_switch_ln_left_158d0002f9b743
       - switch.wall_switch_ln_right_158d0002f9b743
       - switch.wall_switch_ln_158d0002c5db53
+      - switch.0x00158d0003c73bdb_switch
   bedroom_lights:
     name: Свет в спальне
     entities:
@@ -26,6 +32,7 @@ group:
       - light.liustra_v_detskoi_ambilight
       - light.liustra_v_detskoi_nightlight
       - light.0x00158d00042a8a7d_light
+      - switch.0x00158d000247702c_switch
   cabinet_lights:
     name: Свет в кабинете
     entities:
